fix: Added `-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64` in place of DARWIN_AMD64